Change to use EJML

--- a/pom.xml
+++ b/pom.xml
@@ -95,9 +95,9 @@
             <version>${kotlin.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.jetbrains.kotlinx</groupId>
-            <artifactId>kotlinx-coroutines-core</artifactId>
-            <version>1.7.1</version>
+            <groupId>org.ejml</groupId>
+            <artifactId>ejml-all</artifactId>
+            <version>0.42</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
